# cargo-mate

./: .gitignore  CHANGE.log.md  README.md  cmd.md
captain/: .v  .version  Cargo.toml  Cross.toml  LICENSE  PUBLISH_TO_CRATES_IO.md  README-wrappers.md  README.md  build.rs  checksums.sha256  cmd.md  test-binaries.sh  tools.md
captain/sh/: install-cargo-mate.sh  install.sh  pre-install.sh  wrapper-linux.sh  wrapper-macos.sh  wrapper-windows.bat  wrapper-windows.ps1
captain/src/: admin_msg.rs  affiliate.rs  anchor.rs  captain_log.rs  checklist.rs  display.rs  history.rs  journey.rs  journey_backup.rs  lib.rs  main.rs  mutiny.rs  optimize.rs  parser.rs  scat.rs  scrub.rs  smart_parser.rs  strip.rs  tide.rs  treasure_map.rs  user.rs  version.rs
captain/src/captain/: binary_encryptor.rs  captain.rs  captain_status.rs  config.rs  create_secure_binary.rs  create_self_protected_binary.rs  encrypt_binaries.rs  license.rs  license_guard.rs  mod.rs  protection.rs  shell_integration.rs  version_commands.rs  wtf.rs
captain/src/tools/: api_changelog.rs  async_lint.rs  bench_diff.rs  bloat_check.rs  builder_gen.rs  cache_analyzer.rs  code_analyzer.rs  compile_time_tracker.rs  coverage_guard.rs  cross_test.rs  crud_gen.rs  dep_audit.rs  env_check.rs  error_derive.rs  example_gen.rs  feature_map.rs  installer_gen.rs  license_bundler.rs  lifetime_visualizer.rs  macro_expand.rs  migration_gen.rs  mock_derive.rs  mod.rs  panic_analyzer.rs  proto_bind.rs  refactor_engine.rs  release_automation.rs  rust_mentor.rs  secret_scanner.rs  serde_validator.rs  snapshot_test.rs  sql_macro_check.rs  test_gen.rs  trait_explorer.rs  unsafe_analyzer.rs  vendorize.rs  wasm_optimize.rs  workspace_sync.rs
examples/: README.md  advanced_features.rs  basic_workflow.rs
legal/: bbl_software_license.md  pp.md  tos.md
tests/: README.md  integration_test.rs  wrapper_test.rs
tools/: README.md  api_changelog.rs  async_lint.rs  bench_diff.rs  bloat_check.rs  builder_gen.rs  cache_analyzer.rs  code_analyzer.rs  compile_time_tracker.rs  coverage_guard.rs  cross_test.rs  crud_gen.rs  dep_audit.rs  env_check.rs  error_derive.rs  example_gen.rs  feature_map.rs  installer_gen.rs  license_bundler.rs  lifetime_visualizer.rs  macro_expand.rs  migration_gen.rs  mock_derive.rs  mod.rs  panic_analyzer.rs  proto_bind.rs  refactor_engine.rs  release_automation.rs  rust_mentor.rs  secret_scanner.rs  serde_validator.rs  snapshot_test.rs  sql_macro_check.rs  test_gen.rs  trait_explorer.rs  unsafe_analyzer.rs  vendorize.rs  wasm_optimize.rs  workspace_sync.rs
