[package]
name = "cargo-mate"
version = "1.0.94"
edition = "2021"
rust-version = "1.70"
authors = ["Cargo Mate <mate@cargo.do>"]
description = "Rust development companion that enhances cargo with intelligent workflows, state management, performance optimization, and comprehensive project monitoring. Pure binary package - no C compiler required!"
documentation = "https://cargo.do/docs"  
homepage = "https://cargo.do"
repository = "https://github.com/cyber-boost/cargo-mate"
license = "MIT"
readme = "README.md"
keywords = ["cargo", "cli", "build", "development", "optimization"]  
categories = ["development-tools", "command-line-utilities"]  




# Exclude build artifacts and platform-specific files
exclude = [
    "target/",
    "linux/",
    "macos/",
    "windows/",
    "*.protected",
    "*.exe",
    "*.backup",
]

# Removed library target - this is purely a binary package
# Library functionality removed to eliminate any potential C compiler dependencies

# Binary target for cargo-mate
[[bin]]
name = "cm"
path = "src/main.rs"

# This crate compiles with zero system dependencies - no C compiler required!

[badges]
maintenance = { status = "actively-developed" }  # or "passively-maintained", "as-is", "experimental", "looking-for-maintainer", "deprecated", "none"

[dependencies]
# Minimal dependencies that don't require C compilation
# Using simple error handling to avoid C compiler requirement
# No external crates that require C compilation

[profile.release]
opt-level = 3