[package]
name = "cargo-mate"
version = "1.1.6"
edition = "2021"
rust-version = "1.70"
authors = ["Cargo Mate <mate@cargo.do>"]
description = "Rust development companion that enhances cargo with intelligent workflows, state management, performance optimization, and comprehensive project monitoring. Pure binary package - no C compiler required!"
documentation = "https://cargo.do/docs"  
homepage = "https://cargo.do"
repository = "https://github.com/cyber-boost/cargo-mate"
license = "MIT"
readme = "README.md"
keywords = ["cargo", "cli", "build", "development", "optimization"]  
categories = ["development-tools", "command-line-utilities"]  




# Exclude build artifacts and platform-specific files
exclude = [
    "target/",
    "linux/",
    "macos/",
    "windows/",
    "*.protected",
    "*.exe",
    "*.backup",
]

# Removed library target - this is purely a binary package
# Library functionality removed to eliminate any potential C compiler dependencies

# Binary target for cargo-mate
[[bin]]
name = "cm"
path = "src/main.rs"


[package.metadata.binstall]
pkg-url = "https://get.cargo.do/dist/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "https://get.cargo.do/dist/cargo-mate-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "https://get.cargo.do/dist/cargo-mate-static-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "https://get.cargo.do/dist/cargo-mate-linux-aarch64.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "https://get.cargo.do/dist/cargo-mate-macos-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "https://get.cargo.do/dist/cargo-mate-macos-aarch64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "https://get.cargo.do/dist/cargo-mate-windows-x86_64.tar.gz"

[badges]
maintenance = { status = "actively-developed" }  # or "passively-maintained", "as-is", "experimental", "looking-for-maintainer", "deprecated", "none"

[dependencies]
# Minimal dependencies that don't require C compilation
# Using simple error handling to avoid C compiler requirement
# No external crates that require C compilation

[profile.release]
opt-level = 3