[package]
name = "cargo-mate"
version = "1.7.3"
authors = ["cyber-boost"]
description = "Rust development companion that enhances cargo with intelligent workflows, state management, performance optimization, and comprehensive project monitoring."
edition = "2021"
readme = "README.md"
homepage = "https://cargo.do"
repository = "https://github.com/cyber-boost/cargo-mate"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "rust", "development", "cli", "build-tools"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "cm"
path = "src/main.rs"

[lib]
name = "cargo_mate"

include = [
    "src/",
    "Cargo.toml",
    "Cross.toml",
    ".cargo/",
    "build.rs",
    "README.md",
]
crate-type = ["rlib"]

[dependencies]
anyhow = "1"
atty = "0.2"
base64 = "0.22"
cargo_metadata = "0.18"
console_log = { version = "1.0", optional = true }
colored = "2"
log = "0.4"
urlencoding = "2.1"
crossterm = "0.27"
dirs = "5"
# git2 = "0.18"  # Temporarily disabled for cross-compilation
glob = "0.3"
handlebars = "5"
indicatif = "0.17"
notify = "6"
notify-debouncer-mini = "0.4"
petgraph = "0.6"
portable-pty = "0.8"
ratatui = "0.26"
regex = "1"
semver = "1.0"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
shell-words = "1.1"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
flate2 = "1.0"
tar = "0.4"
subprocess = "0.2"
toml = "0.8"
which = "6"
dotenvy = "0.15"
num_cpus = "1.16"
rand = "0.9.2"
rpassword = "7.2"
rustc_version = "0.4"
thiserror = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit", "visit-mut", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.4"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.prettyplease]
version = "0.2"

[dev-dependencies]
tempfile = "3.0"

[dependencies.clap]
features = ["derive"]
version = "4"

[dependencies.nix]
features = [
    "process",
    "signal",
]
version = "0.27"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "blocking", "rustls-tls", "stream"]
#features = ["json", "blocking", "native-tls"]

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
features = ["full"]
version = "1"

[profile.dev]
codegen-units = 128
debug = 1
lto = false
opt-level = 1

[profile.release]
codegen-units = 16
debug = false
lto = true
opt-level = 3
panic = "abort"
strip = true